--- a/src/index.css
+++ b/src/index.css
@@ -271,5 +271,5 @@ fieldset{
   padding: 0 !important;
   width: calc(100% - 24px) !important;
   position: absolute !important;
-  text-align: center !important;
+  text-align: center;
 }
