--- a/src/pages/redeem-reward/redeem-reward.css
+++ b/src/pages/redeem-reward/redeem-reward.css
@@ -7,11 +7,16 @@
 }
 .redeem-sec .reward-item {
   padding: 10px;
+  border-radius: 0px;
+  border: 1px solid #c6c6c6;
+  box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.2);
 }
 .redeem-sec .rewards {
-  min-height: 95px;
-  max-height: 95px;
-  margin: 10px 0px;
+  min-height: 120px;
+  max-height: 120px;
+  margin: 0;
+  display: flex;
+  align-items: center;
 }
 .redeem-sec .item-image {
   width: 100%;
@@ -22,9 +27,10 @@
   font-size: 18px;
   text-align: left !important;
   color: #2b4b62;
-  padding: 10px;
-  line-height: 25px;
+  padding: 10px 10px 10px 20px;
+  line-height: 1.2;
   letter-spacing: normal;
+  display: block;
 }
 
 
