--- a/src/pages/checkout/checkout.css
+++ b/src/pages/checkout/checkout.css
@@ -22,6 +22,7 @@
   color: #707070;
   text-transform: uppercase;
   padding: 0px;
+  letter-spacing: 1px !important;
 }
 .order .right-col .time-slot {
   background: #214F66;
