--- a/src/index.css
+++ b/src/index.css
@@ -194,6 +194,7 @@ fieldset{
   font-size: 12px !important;
   font-family: 'Poppins-Bold' !important;
   padding: 8px 0px !important;
+  letter-spacing: 1.5px !important;
 }
 
 /***** Scrollbar Style *****/
