--- a/src/components/register-form/register-form.css
+++ b/src/components/register-form/register-form.css
@@ -49,7 +49,7 @@
     width: 18.6%;
   }
   .sign-up-section .body-text span {
-    height: 115px;
+    margin-bottom: 50px !important;
     display: flow-root;
   }
   .sign-up-section h4 {
