--- a/src/components/rewards/rewards.css
+++ b/src/components/rewards/rewards.css
@@ -10,7 +10,10 @@
   min-height: 150px;
   background: white;
   box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2) !important;
-  margin: 0px 15px 0 0;
+  margin: 0px 15px 30px 0;
+  min-width: 45% !important;
+  width: 45% !important;
+
 }
 .choose-reward .choose-btn img {
   width: 85%;
@@ -70,7 +73,8 @@
   }
   .choose-reward .choose-btn {
     margin: 0px 0px 15px 0px;
-    height: 100%;
+    height: auto;
+    width: 100% !important;
   }
   .choose-reward .choose-btn img {
     width: auto;
