--- a/src/components/order-details/order-details.css
+++ b/src/components/order-details/order-details.css
@@ -1,10 +1,18 @@
-.order-details {
+.order-details-confirmation {
   background: white;
   padding: 50px;
   -webkit-border-radius: 30px;
   -moz-border-radius: 30px;
   border-radius: 30px;
   margin: 50px auto 50px auto !important;
+}
+
+.order-details-checkout {
+  background: white;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+  margin: 0px auto 0px auto !important;
 }
 .order-details h6 {
   font-family: 'Poppins-Bold', sans-serif !Important;
