--- a/src/components/rewards/rewards.css
+++ b/src/components/rewards/rewards.css
@@ -13,7 +13,7 @@
   margin: 0px 15px 30px 0;
   min-width: 45% !important;
   width: 45% !important;
-
+  border: 1px solid #e4e4e4;
 }
 .choose-reward .apply-reward {
   display: inline-block !important;
@@ -80,17 +80,20 @@
     width: 100% !important;
   }
   .choose-reward .choose-btn img {
-    width: 100%;
+    width: 65%;
   }
   .choose-reward .choose-btn .icon-content {
     justify-content: center;
   }
   .choose-reward .choose-btn.Mui-selected:before {
     margin-top: -15%;
-    margin-left: -8%;
+    margin-left: -13%;
+    border: solid 37px #e58530;
   }
   .choose-reward .choose-btn.Mui-selected:after {
-    margin-top: -13%;
-    margin-left: -3%;
+    margin-top: -10%;
+    margin-left: -4%;
+    width: 14px;
+    height: 32px;
   }
 }
