--- a/src/components/tip/tip.css
+++ b/src/components/tip/tip.css
@@ -1,6 +1,8 @@
 .tip-wrapper .selected-btn {
-  min-width: 85px;
+  min-width: 69px;
+  width: 69px;
   height: 60px;
+  font-size: 16px;
   margin: 20px 18px 0px 0px !important;
 }
 .tip-wrapper .action-btn {
