--- a/src/pages/login2/login2.css
+++ b/src/pages/login2/login2.css
@@ -113,6 +113,23 @@
     margin: 20px 0px 25px 0px;
   }
 }
-.button-list{
+.button-list {
   list-style: none;
+}
+
+.fb-button {
+  margin-top: 14px;
+  width: 100%;
+  height: 61px;
+  background: white;
+  border: 2px solid #bebebe;
+  color: #747474;
+  padding-left: 62px;
+  font-size: 13px;
+  letter-spacing: 1.5px !important;
+  display: inline-block;
+  text-align: left;
+  background: url('../../assets/imgs/fb-icon.png');
+  background-position: 15px 12px;
+  background-repeat: no-repeat;
 }
