--- a/src/components/payment-info/payment-info.css
+++ b/src/components/payment-info/payment-info.css
@@ -7,7 +7,8 @@
 }
 .payment-form .card-details {
   text-align: center;
-  margin: 40px 0px;
+  margin: 40px 0px 20px 0px;
+  display: flex;
 }
 .payment-form .add-gift .label {
   font-size: 16px !important;
@@ -42,6 +43,31 @@
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 6%), 0px 4px 5px 0px rgb(0 0 0 / 6%), 0px 1px 10px 0px rgb(0 0 0 / 6%);
   padding: 16.5px 14px;
 }
+
+.payment-form .payment-bar {
+  box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 6%), 0px 4px 5px 0px rgb(0 0 0 / 6%), 0px 1px 10px 0px rgb(0 0 0 / 6%);
+  padding-left: 10px;
+}
+.payment-form .payment-bar fieldset {
+  box-shadow: none !important;
+}
+.payment-form .payment-bar .MuiTextField-root {
+  margin-bottom: 0px;
+  border-left: 1px solid #e4e4e4;
+  padding-left: 25px;
+  margin-left: 25px;
+}
+.payment-form .payment-bar .MuiTextField-root input {
+  padding: 15px 0px !important;
+}
+.payment-form .size {
+  margin: 5px;
+}
+
+
+
+
+
 @media screen and (max-width: 800px) {
   .payment-form .add-order button {
     width: auto;
