--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -4,10 +4,11 @@
   box-sizing: border-box;
   margin: auto;
 }
-.product-detail h1.heading {
+.product-detail h2.heading {
   font-family: 'Poppins-Medium', sans-serif !important;
   padding-bottom: 15px;
   font-size: 32px;
+  color: #214F66;
 }
 .product-detail .label.bold {
   font-family: 'Poppins-Bold', sans-serif !important;
@@ -39,7 +40,7 @@
   font-size: 13px;
   color: #1781c4;
 }
-.product-detail .menu-items h1 {
+.product-detail .menu-items h2 {
   text-transform: uppercase;
   width: 100%;
   font-size: 30px;
@@ -109,7 +110,7 @@
   .product-detail .custom-btn {
     float: left !important;
   }
-  .product-detail h1 {
+  .product-detail h2 {
     font-size: 24px;
   }
 }
@@ -141,7 +142,7 @@
 }
 
 @media screen and (max-width: 468px) {
-  .product-detail .menu-items h1 {
+  .product-detail .menu-items h2 {
     font-size: 23px;
     padding-bottom: 0px;
   }
@@ -274,3 +275,12 @@
   display: block;
 }
 
+.input-quantity{
+  width: 70px;
+    /* border: none; */
+    border-top: none;
+    border-bottom: none;
+    font-size: 15px;
+    font-family: 'Poppins-Regular', sans-serif !important;
+    font-weight: bold;
+}
