--- a/src/components/payment-info/payment-info.css
+++ b/src/components/payment-info/payment-info.css
@@ -42,6 +42,7 @@
 .payment-form .card-fields {
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 6%), 0px 4px 5px 0px rgb(0 0 0 / 6%), 0px 1px 10px 0px rgb(0 0 0 / 6%);
   padding: 16.5px 14px;
+  height: 20px;
 }
 
 .payment-form .payment-bar {
