--- a/src/components/rewards/rewards.css
+++ b/src/components/rewards/rewards.css
@@ -62,10 +62,18 @@
   margin-left: -37%;
 }
 
-@media screen and (max-width: 768px) {
-  .choose-reward .choose-btn.Mui-selected:before {
-    margin-top: -9%;
-    margin-left: -38%;
+@media screen and (max-width: 900px) {
+  .choose-reward .choose-btn.Mui-selected:after {
+    margin-top: -5%;
+    margin-left: -32%;
+  }
+  .choose-reward .choose-btn {
+    margin-top: 20px;
+    width: 47% !important;
+    margin-right: 40px;
+  }
+  .choose-reward .choose-btn:nth-child(2) {
+    margin-right: 0px;
   }
 }
 
