--- a/src/pages/login2/login2.css
+++ b/src/pages/login2/login2.css
@@ -132,4 +132,5 @@
   background: url('../../assets/imgs/fb-icon.png');
   background-position: 15px 12px;
   background-repeat: no-repeat;
+  cursor: pointer;
 }
