Fixed Split Payment issues (Remove coupon, payment) RW-139

--- a/src/components/tip/tip.css
+++ b/src/components/tip/tip.css
@@ -8,6 +8,10 @@
 .tip-wrapper .action-btn {
   margin-top: 20px;
 }
+
+.tip-wrapper .action-btn .MuiInputLabel-root {
+  background: transparent !important;
+}
 .tip-wrapper .action-btn button {
   background: #214F66;
   color: white;
