--- a/src/pages/forgot-password/forgot.css
+++ b/src/pages/forgot-password/forgot.css
@@ -111,3 +111,21 @@
     margin: 20px 0px 25px 0px;
   }
 }
+
+.fb-button {
+  margin-top: 14px;
+  width: 100%;
+  height: 61px;
+  background: white;
+  border: 2px solid #bebebe;
+  color: #747474;
+  padding-left: 62px;
+  font-size: 13px;
+  letter-spacing: 1.5px !important;
+  display: inline-block;
+  text-align: left;
+  background: url('../../assets/imgs/fb-icon.png');
+  background-position: 15px 12px;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
