--- a/src/components/payment-info/payment-info.css
+++ b/src/components/payment-info/payment-info.css
@@ -42,7 +42,12 @@
 .payment-form .card-fields {
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 6%), 0px 4px 5px 0px rgb(0 0 0 / 6%), 0px 1px 10px 0px rgb(0 0 0 / 6%);
   padding: 16.5px 14px;
-  height: 21px;
+  height: 22px;
+}
+.zipcode ::placeholder {
+  font-size: 13px;
+  color: black !important;
+  font-weight: 600;
 }
 
 .payment-form .payment-bar {
