--- a/src/components/order-confirm-card/order-confirm-card.css
+++ b/src/components/order-confirm-card/order-confirm-card.css
@@ -1,12 +1,14 @@
-@media screen and (max-width: 900px) {
-  .adjust-space {
-    padding-left: 20px;
-  }
-}
-
 @media screen and (max-width: 468px) {
   .adjust-space {
     padding-left: 0;
     margin-top: -20px;
   }
+}
+
+.heading-one{
+  color: #0075BF;
+    font-family: 'Poppins-Medium' !important;
+    font-size: 14px !important;
+    font-weight: 400;
+    text-transform: uppercase;
 }
