--- a/src/pages/order-confirmation/order-confirmation.css
+++ b/src/pages/order-confirmation/order-confirmation.css
@@ -120,3 +120,9 @@
   margin: 0px 5px 5px 0px;
   height: 47px;
 }
+
+.order-details h2{
+  font-family: 'Poppins-Bold', sans-serif !important;
+  color: #214F66;
+  font-size: 36px !important;
+}
