--- a/src/pages/redeem-reward/redeem-reward.css
+++ b/src/pages/redeem-reward/redeem-reward.css
@@ -4,6 +4,7 @@
   color: #414141;
   padding-top: 8px;
   padding-bottom: 25px;
+  line-height: 32px;
 }
 .redeem-sec .reward-item {
   padding: 10px;
