--- a/src/components/register-form/register-form.css
+++ b/src/components/register-form/register-form.css
@@ -14,6 +14,8 @@
   background: white;
   border: none;
   height: auto;
+  -webkit-appearance: none;
+  background-clip: padding-box;
   -webkit-box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.2) !important;
   -moz-box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.2) !important;
   box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.2) !important;
