--- a/src/components/register-form/register-form.css
+++ b/src/components/register-form/register-form.css
@@ -58,4 +58,7 @@
   .sign-up-section h1 {
     font-size: 28px;
   }
+  .sign-up-section .MuiSelect-select {
+    max-width: 195px !important;
+  }
 }
