--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
   margin: auto;
 }
+h4.heading-ui {
+  font-size: 24px;
+  font-family: 'Poppins-Bold', sans-serif !important;
+  color:#214F66;
+  text-transform: uppercase;
+}
 .product-detail h2.heading {
   font-family: 'Poppins-Medium', sans-serif !important;
   padding-bottom: 15px;
