--- a/src/components/iframe/product-listing/index.css
+++ b/src/components/iframe/product-listing/index.css
@@ -9,3 +9,12 @@
 .react-multi-carousel-list {
   /*display: block !important;*/
 }
+
+.carousel-container .title {
+  min-height: 45px;
+}
+.carousel-container .title .custom-btn.cta2-btn {
+  background: white !important;
+  color: #0069aa !important;
+  box-shadow: 0px 3px 4px 0px rgba(0,0,0,0.2);
+}
