--- a/src/components/iframe/product-listing/index.css
+++ b/src/components/iframe/product-listing/index.css
@@ -18,3 +18,7 @@
   color: #0069aa !important;
   box-shadow: 0px 3px 4px 0px rgba(0,0,0,0.2);
 }
+
+.MuiTabs-root .Mui-disabled {
+  display: none;
+}
