--- a/src/pages/iframe/category/category.css
+++ b/src/pages/iframe/category/category.css
@@ -4,7 +4,7 @@
 #categoryMenu .MuiTabs-flexContainer .tabs-btn:nth-child(1) {
   margin-left: 5px !important;
 }
-.carousel-container .react-multiple-carousel__arrow {
-  top: 50%;
-  margin-top: -115px;
-}
+/*.carousel-container .react-multiple-carousel__arrow {*/
+/*  top: 50%;*/
+/*  margin-top: -115px;*/
+/*}*/
