--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -131,6 +131,28 @@ h4.heading-ui {
 }
 
 @media screen and (max-width: 899px) {
+  .product-detail
+  .menu-items
+  .content-panel
+  .card-panel
+  .name-img-panel
+  .item-image {
+  width: 100%;
+  display: block;
+  margin: auto;
+}
+.product-detail .menu-items .content-panel .card-panel .name-img-panel {
+  align-items: flex-start !important;
+}
+.product-detail .menu-items .content-panel .card-panel {
+  padding: 0px 10px 20px 10px !important;
+}
+.product-detail .menu-items .content-panel .card-panel .name-img-panel .name-panel {
+  padding-left: 10px !important;
+  padding-right: 10px !important;
+  overflow-wrap: break-word;
+  text-align: center;
+}
   .product-detail .action-panel {
     position: fixed;
     margin: auto;
@@ -235,6 +257,7 @@ h4.heading-ui {
   box-sizing: border-box;
   height: 100%;
   border-radius: 0;
+  cursor: pointer;
   box-shadow: 0px 2px 3px 0px rgb(0 0 0 / 20%) !important;
 }
 .product-detail .menu-items .content-panel.selected .card-panel {
