--- a/src/pages/check-in/check-in.css
+++ b/src/pages/check-in/check-in.css
@@ -16,3 +16,11 @@
   color: #414141;
   padding-top: 8px;
 }
+
+
+@media screen and (max-width: 960px) {
+  .check-in-section img {
+    width: 50%;
+    height: auto;
+  }
+}
