--- a/src/pages/iframe/register/register.css
+++ b/src/pages/iframe/register/register.css
@@ -9,3 +9,44 @@
     padding: 40px 25px;
   }
 }
+
+.sign-up-section .date-field p {
+  color: #9f9a9a !important;
+  font-size: 14px !important;
+  font-weight: 100;
+  font-family: 'Poppins-Regular' !important;
+}
+.sign-up-section .body-text {
+  color: #5C5757 !important;
+  font-size: 14px !important;
+  font-family: 'Poppins-Regular', sans-serif !important;
+  padding-top: 8px;
+}
+.sign-up-section .body-text span {
+  padding: 0px 10px 0px 0px !important;
+  float: left;
+}
+
+@media screen and (max-width: 900px) {
+  .sign-up-section h1 {
+    font-size: 42px;
+  }
+}
+
+@media screen and (max-width: 468px) {
+
+  .sign-up-section .react-date-inputs input {
+    width: 18.6%;
+  }
+  .sign-up-section .body-text span {
+    margin-bottom: 50px !important;
+    display: flow-root;
+  }
+  .sign-up-section h1 {
+    font-size: 28px;
+  }
+  .sign-up-section .MuiSelect-select {
+    max-width: 195px !important;
+  }
+}
+
