--- a/src/components/register-confirmation/register-confirmation.css
+++ b/src/components/register-confirmation/register-confirmation.css
@@ -33,10 +33,16 @@
     width: calc(100% - 55%);
   }
   .confirmation-form input {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    font-size: 13px;
+    height: 40px;
+  }
+  .confirmation-form .react-date-inputs {
+    margin-bottom: 10px;
   }
   .confirmation-form .register-confirmation-select {
-    margin-bottom: 20px !important;
+    margin-bottom: 10px !important;
+    font-size: 13px;
   }
   .confirmation-form fieldset {
     box-shadow: none !important;
