--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -57,6 +57,15 @@ h2.heading-ui {
 
 .product-detail .action-panel {
   margin-top: 30px;
+  position: fixed;
+  margin: auto;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  padding: 30px;
+  background: #fff;
+  z-index: 1000;
 }
 .product-detail h3 {
   text-transform: uppercase;
@@ -127,7 +136,7 @@ h2.heading-ui {
     margin: auto;
     left: 0 !important;
     right: 0 !important;
-    top:  35px !important;
+    top: 35px !important;
     bottom: auto !important;
   }
   .ss-panl {
