--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,12 +1,13 @@
- .list {
+  .list {
         width: 100%;
         display: grid;
         list-style: none;
-        grid-template-columns: auto auto auto auto auto auto auto;
+        grid-template-columns: auto auto auto auto auto auto auto auto;
+        padding-left: 10px;
       }
 
 @media screen and (max-width: 900px) {
-    .list 
+    .list
     {
         grid-template-columns: auto auto;
 
