--- a/src/components/cart/upsells/others/index.css
+++ b/src/components/cart/upsells/others/index.css
@@ -31,7 +31,7 @@
   .name-img-panel
   .name-panel {
     padding-left: 15px !important;
-    padding-top: 15px;
+    padding-top: 23px;
     overflow-wrap: break-word;
     text-align: left;
     font-size: 16px;
@@ -88,7 +88,7 @@
   /* max-width: 354px; */
   /*min-height: 170px;*/
   font-size: 18px;
-  width: 50%;
+  width: 100%;
   float: left;
 }
 .upsells .content-panel .card-panel {
@@ -100,7 +100,15 @@
   cursor: pointer;
   box-shadow: 0px 2px 3px 0px rgb(0 0 0 / 20%) !important;
 }
-.upsells .content-panel.selected .card-panel {
+  .upsells .content-panel .card-panel.card-item {
+    min-height: 90px;
+    max-height: 90px;
+  }
+  .upsells .content-panel .card-panel.card-item .check-mark {
+    top: 18px !important;
+    left: 25px !important;
+  }
+ .upsells .content-panel.selected .card-panel {
   border: 1px solid #e58734;
   position: relative;
 }
