--- a/src/components/cart/upsells/others/index.css
+++ b/src/components/cart/upsells/others/index.css
@@ -44,74 +44,6 @@
   justify-content: end;
 }
 
-@media screen and (max-width: 899px) {
-  .upsells
-  .content-panel
-  .card-panel
-  .name-img-panel
-  .name-panel {
-    padding-left: 0px !important;
-    padding-top: 15px;
-    overflow-wrap: break-word;
-    text-align: center;
-    font-size: 15px;
-  }
-  .upsells .content-panel {
-    justify-content: center;
-  }
-  #cart-box-upsells {
-    max-width: 370px !important;
-  }
-  .upsells .content-panel.selected .card-panel .check-mark {
-    /* margin: auto; */
-    left: 120px !important;
-    right: 0 !important;
-    top: 130px !important;
-    bottom: auto !important;
-  }
-}
-
-@media screen and (max-width: 640px) {
-  .upsells
-  .content-panel
-  .card-panel
-  .name-img-panel
-  .name-panel {
-    padding-left: 0px !important;
-    padding-top: 25px;
-    overflow-wrap: break-word;
-    text-align: center;
-    font-size: 14px;
-  }
-  .upsells
-  .content-panel
-  .card-panel
-  .name-img-panel
-  .item-image {
-    width: 65% !important;
-    display: block;
-    margin: -3px 0px 12px 0px;
-  }
-  #cart-box-upsells {
-    top: 0;
-    right: 0;
-    width: 100%;
-    border: 1px solid #666;
-    height: 100%;
-    z-index: 9999;
-    position: fixed;
-    background: #fff;
-    border-top: 0;
-    border-right: 0;
-    margin: 0px;
-  }
-}
-
-@media screen and (max-width: 468px) {
-  .upsells .content-panel {
-    flex-direction: column;
-  }
-}
 .upsells .content-panel {
   padding: 10px 20px 10px 0px;
   cursor: pointer;
@@ -218,3 +150,80 @@
   padding: 5px;
   text-overflow: ellipsis;
 }
+
+#cart-box-upsells button span.MuiTouchRipple-root {
+  display: none !important;
+}
+
+
+  @media screen and (max-width: 899px) {
+    .upsells
+    .content-panel
+    .card-panel
+    .name-img-panel
+    .name-panel {
+      padding-left: 0px !important;
+      padding-top: 15px;
+      overflow-wrap: break-word;
+      text-align: center;
+      font-size: 15px;
+    }
+    .upsells .content-panel {
+      justify-content: center;
+    }
+    #cart-box-upsells {
+      max-width: 370px !important;
+    }
+    .upsells .content-panel.selected .card-panel .check-mark {
+      /* margin: auto; */
+      left: 120px !important;
+      right: 0 !important;
+      top: 130px !important;
+      bottom: auto !important;
+    }
+  }
+
+  @media screen and (max-width: 640px) {
+    .upsells
+    .content-panel
+    .card-panel
+    .name-img-panel
+    .name-panel {
+      padding-left: 0px !important;
+      padding-top: 25px;
+      overflow-wrap: break-word;
+      text-align: center;
+      font-size: 14px;
+    }
+    .upsells
+    .content-panel
+    .card-panel
+    .name-img-panel
+    .item-image {
+      width: 65% !important;
+      display: block;
+      margin: 0px 0px 0px 20px !important;
+    }
+    #cart-box-upsells {
+      top: 0;
+      right: 0;
+      width: 100%;
+      border: 1px solid #666;
+      height: 100%;
+      z-index: 9999;
+      position: fixed;
+      background: #fff;
+      border-top: 0;
+      border-right: 0;
+      margin: 0px;
+    }
+    .upsells .content-panel .card-panel.card-item {
+      max-height: 100% !important;
+    }
+  }
+
+  @media screen and (max-width: 468px) {
+    .upsells .content-panel {
+      flex-direction: column;
+    }
+  }
