--- a/src/components/login-form/index.css
+++ b/src/components/login-form/index.css
@@ -23,6 +23,9 @@
   text-decoration: none;
   cursor: 'pointer';
 }
+.sign-in-section .forgot-pass:hover {
+  color: #0075BF;
+}
 
 @media screen and (max-width: 900px) {
   .sign-in-section button {
